--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "flowbite": "^2.3.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
